--- a/addons/ljr_business_order/template/web/department_list.html
+++ b/addons/ljr_business_order/template/web/department_list.html
@@ -40,6 +40,7 @@
                 //var zTree = $.fn.zTree.getZTreeObj("tree");
                 if (treeNode.isParent) {
                     zTree.expandNode(treeNode);
+                    demoIframe.attr("src",treeNode.file);
                     return false;
                 } else {
                     demoIframe.attr("src",treeNode.file);
