刷卡端+订餐统计表

--- a/addons/ljr_business_order/template/web/appointment.html
+++ b/addons/ljr_business_order/template/web/appointment.html
@@ -9,8 +9,9 @@
     }
 </script>
 <ul class="nav nav-tabs">
-    <li class="active"><a href="{php echo $this->createWebUrl('orders',array('op'=>'appointment'));}">订餐列表</a></li>
-    <li ><a href="{php echo $this->createWebUrl('orders',array('op'=>'index'));}">就餐列表</a></li>
+    <li class="active"><a href="{php echo $this->createWebUrl('orders',array('op'=>'appointment'));}">订餐明细</a></li>
+    <li ><a href="{php echo $this->createWebUrl('orders',array('op'=>'index'));}">消费明细</a></li>
+    <li ><a href="{php echo $this->createWebUrl('orders',array('op'=>'statistics'));}">订餐统计</a></li>
 </ul>
 <div class="main">
     <div class="panel panel-info">
