--- a/addons/ljr_business_order/template/mobile/index.html
+++ b/addons/ljr_business_order/template/mobile/index.html
@@ -5,13 +5,19 @@
         <div class="col-xs-6" align="center" style="padding-top: 10px;">
             <a href="{php echo $this->createMobileUrl('appointment',array('op'=>'appointment'));}">
                 <img src="/eat.png" style="width:80%;" />
-                <p>我要点餐</p>
+                <p>我的点餐</p>
             </a>
         </div>
         <div class="col-xs-6" align="center" style="padding-top: 10px;">
             <a href="{php echo $this->createMobileUrl('appointment',array('op'=>'order'));}">
                 <img src="/order.png" style="width:80%;" />
                 <p>我要就餐</p>
+            </a>
+        </div>
+        <div class="col-xs-6" align="center" style="padding-top: 10px;">
+            <a href="{php echo $this->createMobileUrl('appointment',array('op'=>'card'));}">
+                <img src="/order.png" style="width:80%;" />
+                <p>IC卡</p>
             </a>
         </div>
     </div>
