--- a/addons/ljr_business_order/template/web/add_type.html
+++ b/addons/ljr_business_order/template/web/add_type.html
@@ -42,10 +42,10 @@
                     </div>
                 </div>
                     <div class="form-group">
-                        <label class="col-xs-12 col-sm-3 col-md-2 control-label">状态</label>
+                        <label class="col-xs-12 col-sm-3 col-md-2 control-label">没有订餐能否消费</label>
                         <div class="col-sm-9 col-xs-12">
-                            <label for="isshow1" class="radio-inline"><input type="radio" name="status" value="1" id="isshow1" {if $the_one['status']=='1'}  checked="true" {/if}> 正常</label>&nbsp;&nbsp;&nbsp;
-                            <label for="isshow0" class="radio-inline"><input type="radio" name="status" value="0" id="isshow0"  {if $the_one['status'] == '0'}  checked="true" {/if}> 失效</label>
+                            <label for="isshow1" class="radio-inline"><input type="radio" name="status" value="1" id="isshow1" {if $the_one['status']=='1'}  checked="true" {/if}> 能</label>&nbsp;&nbsp;&nbsp;
+                            <label for="isshow0" class="radio-inline"><input type="radio" name="status" value="0" id="isshow0"  {if $the_one['status'] == '0'}  checked="true" {/if}> 不能</label>
                         </div>
                     </div>
                 </div>
