--- a/addons/ljr_business_order/template/web/staff_add.html
+++ b/addons/ljr_business_order/template/web/staff_add.html
@@ -38,7 +38,12 @@
                             <input type="text" name="name" value="{$the_one['name']}" class="form-control" />
                         </div>
                     </div>
-
+                    <div class="form-group">
+                        <label class="col-xs-12 col-sm-3 col-md-2 control-label">IC卡号：</label>
+                        <div class="col-sm-9 col-xs-12">
+                            <input type="text" name="ic_number" value="{$the_one['ic_number']}" class="form-control" />
+                        </div>
+                    </div>
                     <div class="form-group">
                         <label class="col-xs-12 col-sm-3 col-md-2 control-label">性别</label>
                         <div class="col-sm-9 col-xs-12">
