--- a/addons/ljr_business_order/template/web/staff_list.html
+++ b/addons/ljr_business_order/template/web/staff_list.html
@@ -15,6 +15,7 @@
                 <th>性别</th>
                 <th>部门</th>
                 <th>职位</th>
+                <th>卡号</th>
                 <th>状态</th>
                 <th>操作</th>
             </tr>
@@ -24,6 +25,7 @@
                 <td>{if $staff['sex'] == 1}男{else}女{/if}</td>
                 <td>{$staff['d_name']}</td>
                 <td>{$staff['p_name']}</td>
+                <td>{$staff['ic_number']}</td>
                 <td>{if $staff['status'] == 1}有效{else}无效{/if}</td>
                 <td>
 
