--- a/addons/lanyu_appointment/template/web/order_list.html
+++ b/addons/lanyu_appointment/template/web/order_list.html
@@ -95,18 +95,18 @@
                     <br />
                     {/loop}
                 </td>
-                <td>{if $l['status']=='1'}<span class="label label-default">未支付</span>{else if $l['status'] == 2}<span class="label label-success">已支付</span>{else if $l['status'] == 0}<span class="label label-success">已取消</span>{else if $l['status'] == 3}<span class="label label-success">已完成</span>{/if}</td>
+                <td>{if $l['status']=='1'}<span class="label label-default">未支付</span>{else if $l['status'] == 2}<span class="label label-success">已支付</span>{else if $l['status'] == 0}<span class="label label-danger">已取消</span>{else if $l['status'] == 3}<span class="label label-success">已完成</span>{/if}</td>
                 <td>
                     <a href="{php echo $this->createWebUrl('order',array('id' => $l['id'],'op'=>'detail'))}" title="查看" data-toggle="tooltip" data-placement="bottom" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-search"></span></a>
-
+                    {if $l['status'] == 1 || $l['status'] == 2}
+                    <a href="#" title="取消订单" onclick="cancle({$l['id']});" data-toggle="tooltip" data-placement="bottom" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-remove"></span></a>
+                    {/if}
+                    {if $l['status'] == 2 }
+                    <a href="#" title="完成订单" onclick="finish({$l['id']});" data-toggle="tooltip" data-placement="bottom" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-ok"></span></a>
+                    {/if}
                 </td>
             </tr>
             {/loop}
-            <tr>
-                <td colspan="7">
-                    <a class='btn btn-default' href="{php echo $this->createWebUrl('store', array('op'=>'post','id'=>0));}"><i class="fa fa-arrows"></i> 添加店铺</a>
-                </td>
-            </tr>
             </tbody>
         </table>
         </form>
@@ -117,6 +117,42 @@
     require(['bootstrap'],function($){
         $('.btn').tooltip();
     });
+    function cancel(id){
+        if(confirm("是否确定取消订单？")){
+            var url = "{php echo $this->createWebUrl('order',array('op' => 'cancel'))}";
+            $.ajax({
+                type : 'post',
+                url : url,
+                data : {'id' : id},
+                success : function(data){
+                    if(data == 111){
+                        alert("操作成功！");
+                        location.reload();
+                    }else{
+                        alert("系统繁忙，请稍后重试！");
+                    }
+                }
+            });
+        }
+    }
+    function finish(id){
+        if(confirm("是否确定已经完成服务并收款？")){
+            var url = "{php echo $this->createWebUrl('order',array('op' => 'finish'))}";
+            $.ajax({
+                type : 'post',
+                url : url,
+                data : {'id' : id},
+                success : function(data){
+                    if(data == 111){
+                        alert("操作成功！");
+                        location.reload();
+                    }else{
+                        alert("系统繁忙，请稍后重试！");
+                    }
+                }
+            });
+        }
+    }
 </script>
 
 {template 'common/footer'}
